--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!---------
     Pop up window if there is no winner
 ---->
-    <div id="restart-game" class="show">
+    <div id="restart-game" class="hidden">
         <h2 id="no-winner">No Winner</h2>
         <button id="reset" type="reset">Restart Game</button>
     </div>
