Remove close button and fixed logic to display pop up box for no winner

--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
 
     <div id="popup" class="show">
         <h2 id="message">Player <span id="whoWon">X</span> WINS</h2>
-        <button id="reset" type="reset">Play Again</button>
-        <div id="close">x</div>        
+        <button id="reset" type="reset">Play Again</button>      
     </div>
 <!---------
     Pop up window if there is no winner
 ---->
-    <div id="restart-game" class="hidden">
+    <div id="restart-game" class="show">
         <h2 id="no-winner">No Winner</h2>
-        <button id="reset" type="reset">Restart Game</button>
+        <button id="restart" type="reset">Restart Game</button>
     </div>
 
     <script src="main.js"></script>
